# python-flask-api-simple

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  mysql.dockerfile  post-create.sh
.devcontainer/init_db/: create_table.sql  insert_default_rows.sql
src/: app.py  entrypoint.sh  uwsgi.ini
src/config/: __init__.py  env.py  load_main.py  log.py  rdb.py
src/config/data/: README.md  dev.credential.env  dev.env  test.env
src/db/: __init__.py  employee.py  init_pool.py
src/utils/: __init__.py  response_form.py  validation_model.py
src/views/: __init__.py  data_view.py  manage_view.py  search_view.py
test/: api_test.py
