[tool.poetry]
name = "python-flask-api-simple"
version = "1.0.0"
description = "Simple mock-up for python RESTful API by flask framework"
authors = ["g1 <mcom34606@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
